add change status field to history log object
